# hapc-rs

./: Cargo.toml  acc.json
hapc/: Cargo.toml
hapc/src/: hap_session.rs  hapclient.rs  lib.rs  pair_setup.rs  pair_verify.rs  session_stream.rs  stream_wrapper.rs  tlv.rs  utils.rs
hapc/src/accessory/: mod.rs  parser.rs  parser_tests.rs  permissions.rs  service_type.rs  value.rs
hapc/src/srp/: client.rs  mod.rs  utils.rs
hapcl/: Cargo.toml
hapcl/src/: hapclient.rs  req_builder.rs  tlv.rs
hapcli/: Cargo.toml
hapcli/src/: hapclient.rs  lib.rs  req_builder.rs
src/: hapclient.rs  lib.rs
tools/: Cargo.toml
tools/src/: main.rs  pair.rs  pair_verify.rs  session.rs
