[package]
name = "hapc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
hyper = { version="^0.14.20", features=["client", "http1", "runtime"] }
tokio = { version = "^1.17.0", features = ["full"] }
# srp = "^0.6"
srp = { path = "../vendor/srp"}
sha2 = "^0.10"
rand = "^0.8.5"
num-bigint = "0.4.3"
