[package]
name = "hapc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hap_http_parser = {git = "https://github.com/aunoor/hap-http-parser-rs" }

byteorder = "1.4.3"
hyper = { version="^0.14.20", features=["client", "http1", "runtime"] }
tokio = { version = "^1.17.0", features = ["full"] }

rand = "^0.7"

aead = "0.4.3"
chacha20poly1305 = "0.8"
digest = "0.9"
ed25519-dalek = { version = "^1.0.1", features = ["std"] }
x25519-dalek = "0.6"
sha2 = "^0.9.9"
srp = "0.6"
uuid = "1.1.2"
num-bigint = "^0.4"
hkdf = "^0.9"
subtle = "2.4"
futures = "0.3.21"

serde_json = "1.0"
serde = { version = "1.0.144", features = ["derive"] }


[build-dependencies]
num-traits = "0.2"
